--- a/databases-py.adoc
+++ b/databases-py.adoc
@@ -237,7 +237,11 @@ here:
 [source,role=copypaste]
 ----
 {% if PARKSMAP_PY %}
+{% if GIT_HOST == "github" %}
+https://github.com/openshift-roadshow/nationalparks-py/blob/master/wsgi.py#L11-L18
+{% else %}
 http://{{GITLAB_URL_PREFIX}}.{{ROUTER_ADDRESS}}/{{GITLAB_USER}}/nationalparks-py/blob/{{NATIONALPARKS_VERSION}}/wsgi.py#L11-18
+{% endif %}
 {% else %}
 http://{{GITLAB_URL_PREFIX}}.{{ROUTER_ADDRESS}}/{{GITLAB_USER}}/nationalparks/blob/{{NATIONALPARKS_VERSION}}/src/main/java/org/openshift/parks/mongo/DBConnection.java#L44-l48
 {% endif %}
