--- a/python.adoc
+++ b/python.adoc
@@ -1,8 +1,13 @@
 ## Lab: Deploying Python Code
 
 ### Application Description
-In this lab, we're going to deploy a backend service, developed in Python programming language that will expose 2 main REST endpoints to the visualizer application (`parksmap` web component that was deployed in the previous labs). The application will query for national parks information (including it's coordinates) that is stored in a Mongo database.
-This application will also provide an external access point, so that the API provided can be directly used by the end user.
+In this lab, we're going to deploy a backend service, developed in Python
+programming language that will expose 2 main REST endpoints to the visualizer
+application (`parksmap` web component that was deployed in the previous labs).
+The application will query for national parks information (including it's
+coordinates) that is stored in a Mongo database.
+This application will also provide an external access point, so that the API
+provided can be directly used by the end user.
 
 image::roadshow-app-architecture-nationalparks-1.png[Application architecture,800,align="center"]
 
@@ -50,39 +55,50 @@ places.
 #### Add to Project
 Because the `nationalparks` application is a back-end to serve data that our
 existing front-end will consume, we are going to build it inside the existing
-`{{EXPLORE_PROJECT_NAME}}{{USER_SUFFIX}}` project. And, we will do it from the web console.
+`{{EXPLORE_PROJECT_NAME}}{{USER_SUFFIX}}` project. And, we will do it from the
+web console.
 
-#### Using application code on embedded GitLab
+#### Using application code
 
 OpenShift can work with any accessible Git repository. This could be GitHub,
 GitLab, or any other server that speaks Git. You can even register webhooks in
 your Git server to initiate OpenShift builds triggered by any update to the
 application code!
 
+{% if GIT_HOST == "github" %}
+The repository that we are going to use is available at Github.com
+
+https://github.com/openshift-roadshow/nationalparks-py[https://github.com/openshift-roadshow/nationalparks-py]
+
+To be able to do code changes later in the workshop, you should fork the
+repository into your own Github account.
+{% else %}
 The repository that we are going to use is already cloned in the internal GitLab repository
 and located at the following URL:
 
-{% if GIT_HOST == "github" %}
-https://github.com/openshift-roadshow/nationalparks-py[https://github.com/openshift-roadshow/nationalparks-py]
-{% else %}
 http://{{GITLAB_URL_PREFIX}}.{{ROUTER_ADDRESS}}/{{GITLAB_USER}}/nationalparks-py/tree/{{NATIONALPARKS_VERSION}}[http://{{GITLAB_URL_PREFIX}}.{{ROUTER_ADDRESS}}/{{GITLAB_USER}}/nationalparks-py/tree/{{NATIONALPARKS_VERSION}}]
-{% endif %}
 
 Your GitLab credentials are: *{{GITLAB_USER}}/{{GITLAB_PASSWORD}}*
 
 Later in the lab, we want you to make a code change and then rebuild your
 application. This is a fairly simple Python application.
+{% endif %}
 
 #### Build the Code on OpenShift
 
 While the `new-app` command makes it very easy to get OpenShift to build code
-from a GitHub/GitLab repository into a Docker image, we can also use the web console to
-do the same thing. Similar to how we used "Add to project" before with a
-Docker-formatted image, we can do the same for specifying a source code
-repository. Since for this lab you have your own GitLab repository let's use it with
-a simple Python S2I image.
+from a GitHub/GitLab repository into a Docker image, we can also use the web
+console to do the same thing. Similar to how we used "Add to project" before
+with a Docker-formatted image, we can do the same for specifying a source code
+repository.
+{% if GIT_HOST == "github" %} You have already forked the Github repository so
+let's use it with a simple Python S2I image.
+{% else %} Since for this lab you have your own GitLab repository let's use it
+with a simple Python S2I image.
+{% endif %}
 
-In the OpenShift web console, find your `{{EXPLORE_PROJECT_NAME}}{{USER_SUFFIX}}` project, and then
+In the OpenShift web console, find your
+`{{EXPLORE_PROJECT_NAME}}{{USER_SUFFIX}}` project, and then
 click the *"Add to Project"* button. You will see a number of runtimes that you
 can choose from, but you will want to select the one titled
 `python:3.5`.
@@ -96,7 +112,7 @@ the Git repository URL, enter:
 [source]
 ----
 {% if GIT_HOST == "github" %}
-https://github.com/openshift-roadshow/nationalparks-py.git
+https://github.com/(your Github username)/nationalparks-py.git
 {% else %}
 http://{{GITLAB_URL_PREFIX}}.{{ROUTER_ADDRESS}}/{{GITLAB_USER}}/nationalparks-py.git
 {% endif %}
@@ -107,6 +123,8 @@ NOTE: All of these runtimes shown are made available via *Templates* and
 
 image::new-national-parks-1-py.png[Runtimes]
 
+{% if modules.pipelines %}
+
 These labs were written against specific points in time for these
 applications. With Git as our version control system (VCS), we are using the
 concept of *Branches/Tags*. Click on *Show advanced routing, build, and deployment
@@ -114,6 +132,8 @@ options*. In the *Git Reference* field enter "1.0.0". This will cause the S2I
 process to grab that specific tag in the code repository.
 
 image::nationalparks-tag-py.png[Runtimes]
+
+{% endif %}
 
 {% if USE_MAVEN %}
 
