--- a/codechanges.adoc
+++ b/codechanges.adoc
@@ -13,7 +13,7 @@ achieved.
 #### Getting the webhook URL
 
 Go to **Builds** -> **Builds** -> **Configuration** and there in the
-**Triggers** sectoin there is **Github webhook URL** copy the URL to be used
+**Triggers** section there is **Github webhook URL** copy the URL to be used
 for configuring the webhook at Github.
 
 
