--- a/explore.adoc
+++ b/explore.adoc
@@ -88,7 +88,7 @@ project. You can do this with the following command:
 
 [source,role=copypaste]
 ----
-oc new-project {{EXPLORE_PROJECT_NAME}}{{USER_SUFFIX}}
+$ oc new-project {{EXPLORE_PROJECT_NAME}}{{USER_SUFFIX}}
 ----
 
 You will see the following confirmation message:
@@ -103,7 +103,7 @@ can do this with the following command:
 
 [source,role=copypaste]
 ----
-oc project {{EXPLORE_PROJECT_NAME}}{{USER_SUFFIX}}
+$ oc project {{EXPLORE_PROJECT_NAME}}{{USER_SUFFIX}}
 ----
 
 You will see the following confirmation message:
