--- a/install.adoc
+++ b/install.adoc
@@ -66,20 +66,23 @@ file using file explorer and select to extract the contents.
 Open up a terminal window and change to the directory where you downloaded the
 file.  Once you are in the directory, enter in the following command:
 
-[source]
+[source,role=copypaste]
 ----
 $ tar zxvf oc-macosx.tar.gz
 ----
+The tar.gz file name needs to be replaced by the entire name that was downloaded in the previous step.
 
 **Linux:**
 
 Open up a terminal window and change to the directory where you downloaded the
 file.  Once you are in the directory, enter in the following command:
 
-[source]
+[source,role=copypaste]
 ----
 $ tar zxvf oc-linux.tar.gz
 ----
+The tar.gz file name needs to be replaced by the entire name that was downloaded in the previous step.
+
 
 #### Adding `oc` to your PATH
 
