--- a/demos/msa-service-resilience.adoc
+++ b/demos/msa-service-resilience.adoc
@@ -28,15 +28,12 @@ orders without knowing about the inventory.
 
 
 ### Demonstrate Container Lifecycle Management
+{% if modules.demos_msa-cicd-eap %}
 
 * Explain OpenShift container health management using
 https://docs.google.com/presentation/d/1bt4k9yB0wDOj0d5WzDCWqftPxIizQ7f5S15LysEGFyQ/edit#slide=id.g1b95a791a8_0_24[the slides]
 * In the OpenShift web console, go to *CoolStore PROD* project
-{% if modules.demos_msa-cicd-eap %}
 * Scroll down to find the *Inventory Live* service group
-{% else %}
-* Scroll down to find the *Inventory* service group
-{% endif %}
 * Explain that the blue circle shows the number containers that back *inventory-green* service
 
 ====
@@ -52,11 +49,52 @@ image::demos/msa-resilience-inventory.png[Live Inventory Container,width=800,ali
 and added automatically to the load-balancer. If one container fails,
 there will be another container that can service requests
 
-image::demos/msa-resilience-scaled.png[Scaled Up,width=540,align=center]
+image::demos/msa-resilience-scaled-bg.png[Scaled Up,width=540,align=center]
 
 * Click on the blue circle
 * Explain that the list of pods backing the *inventory-green* is displayed
 * Click on one of the containers with a name similar to *inventory-green-n-nnnnn*
+* Explain that you can see the pod details such as
+** The container image that is deployed
+** The host that container is deployed on
+** Persistent storage attached to the container
+** Memory and CPU configurations
+** Health and number of times its restarted +
+* Click on *Actions* button and then *Delete* to delete this pod
+
+image::demos/msa-resilience-delete-pod-bg.png[Delete Pod,width=920,align=center]
+
+* Click on *Overview* in the left sidebar menu
+* Explain that OpenShift immediately realizes that number of pods
+backing the *CoolStore GW* service is reduced to 1 while it was declared
+to have 2 pods backing this service for high-availability. OpenShift
+restarts the removed pod in order to bring the number of pods back to 2 pods.
+
+image::demos/msa-resilience-auto-healing-bg.png[Auto Healing,width=540,align=center]
+
+* Explain that OpenShift allows distinguishing between failures that
+might resolve with a restart and more severe issues that need required
+further investigation. In latter cases, OpenShift is able to remove
+those pods from the load-balancer and send user to the healthy
+containers
+
+{% else %}
+
+* Explain OpenShift container health management using
+https://docs.google.com/presentation/d/1bt4k9yB0wDOj0d5WzDCWqftPxIizQ7f5S15LysEGFyQ/edit#slide=id.g1b95a791a8_0_24[the slides]
+* In the OpenShift web console, go to *CoolStore PROD* project
+* Scroll down to find the *Inventory* service group
+* Explain that the blue circle shows the number containers that back *inventory* service
+* Click on the up arrow to scale the inventory container to two containers.
+* Explain that in a few seconds, a new identical container is deployed
+and added automatically to the load-balancer. If one container fails,
+there will be another container that can service requests
+
+image::demos/msa-resilience-scaled.png[Scaled Up,width=540,align=center]
+
+* Click on the blue circle
+* Explain that the list of pods backing the *inventory* is displayed
+* Click on one of the containers with a name similar to *inventory-n-nnnnn*
 * Explain that you can see the pod details such as
 ** The container image that is deployed
 ** The host that container is deployed on
@@ -80,6 +118,8 @@ might resolve with a restart and more severe issues that need required
 further investigation. In latter cases, OpenShift is able to remove
 those pods from the load-balancer and send user to the healthy
 containers
+
+{% endif %}
 
 ### Demonstrate Service Resilience and Preventing Cascading Failures
 
