--- a/demos/msa-continuous-security.adoc
+++ b/demos/msa-continuous-security.adoc
@@ -5,7 +5,7 @@
 |*Length*|~8 min
 |*Difficulty*|Medium
 |*Slides*|NA
-|*Video*|https://drive.google.com/open?id=0B630TpgzAhO_YUJDNF8yVV9wdkE[Google Drive]
+|*Video*|https://www.youtube.com/watch?v=SGh5wQivQcE&list=PLk57upl23Db1fYboes5JowhAtEB3EWxEP&index=9[YouTube]
 |*Simulation*  
 (https://drive.google.com/open?id=0B630TpgzAhO_eERmS2lJcDM2OVU[Tutorial]) |https://drive.google.com/open?id=0B630TpgzAhO_RWlycTVpV3FraUE[Mac]
 https://drive.google.com/open?id=0B630TpgzAhO_bHROeW1lYUE2RHc[HTML]
