--- a/demos/msa-agile-integration.adoc
+++ b/demos/msa-agile-integration.adoc
@@ -5,7 +5,7 @@
 |*Length*|~6 min
 |*Difficulty*|Medium
 |*Slides*|https://docs.google.com/presentation/d/1bt4k9yB0wDOj0d5WzDCWqftPxIizQ7f5S15LysEGFyQ/edit#slide=id.g1b64d8284a_0_5[Google Slide]
-|*Video*|https://drive.google.com/open?id=0BwYg9EJiu13fX0dMSlpId2pFTkk[Google Drive]
+|*Video*|https://www.youtube.com/watch?v=qEkUTSgiBDE&list=PLk57upl23Db1fYboes5JowhAtEB3EWxEP&index=2[YouTube]
 |*Simulation*  
 (https://drive.google.com/open?id=0B630TpgzAhO_eERmS2lJcDM2OVU[Tutorial]) |https://drive.google.com/open?id=0B630TpgzAhO_cFBpTU4wNjVQcGM[Mac]  
 https://drive.google.com/open?id=0B630TpgzAhO_dXVMSVNIVWpvSkk[HTML]
