--- a/demos/msa-dev-productivity-jbds.adoc
+++ b/demos/msa-dev-productivity-jbds.adoc
@@ -5,7 +5,7 @@
 |*Length*|~7 min
 |*Difficulty*|Hard
 |*Slides*|https://docs.google.com/presentation/d/1bt4k9yB0wDOj0d5WzDCWqftPxIizQ7f5S15LysEGFyQ/edit#slide=id.g1cdbadc42a_2_4[Google Slide]
-|*Video*|https://drive.google.com/open?id=0B630TpgzAhO_SE9QTTJNb04tQms[Google Drive]
+|*Video*|https://www.youtube.com/watch?v=D3ziFwiSMuk&list=PLk57upl23Db1fYboes5JowhAtEB3EWxEP&index=5[YouTube]
 |*Simulation*|NA
 |===
 
