--- a/demos/msa-pr-code-review-without-jbds.adoc
+++ b/demos/msa-pr-code-review-without-jbds.adoc
@@ -5,7 +5,7 @@
 |*Length*|~5 min
 |*Difficulty*|Easy
 |*Slides*|https://docs.google.com/presentation/d/1bt4k9yB0wDOj0d5WzDCWqftPxIizQ7f5S15LysEGFyQ/edit#slide=id.g1b05a1839c_0_0[Google Slide]
-|*Video*|https://drive.google.com/open?id=0B630TpgzAhO_SlVzeG1XZzJ0NDA[Google Drive]
+|*Video*|https://www.youtube.com/watch?v=XPWuLSXc0Vw&list=PLk57upl23Db1fYboes5JowhAtEB3EWxEP&index=7[YouTube]
 |*Simulation*  
 (https://drive.google.com/open?id=0B630TpgzAhO_eERmS2lJcDM2OVU[Tutorial]) |https://drive.google.com/open?id=0B630TpgzAhO_OEdOWWUtMWJlSGM[Mac]
 https://drive.google.com/open?id=0B630TpgzAhO_dlhCaXRoVUhHaU0[HTML]
