--- a/demos/msa-cicd-eap.adoc
+++ b/demos/msa-cicd-eap.adoc
@@ -6,9 +6,11 @@
 |*Difficulty*|Medium
 |*Slides*|https://docs.google.com/presentation/d/1bt4k9yB0wDOj0d5WzDCWqftPxIizQ7f5S15LysEGFyQ/edit#slide=id.g1b95a791a8_0_0[Google Slide]
 |*Video*|https://www.youtube.com/watch?v=6aYohdDRZ3c&list=PLk57upl23Db1fYboes5JowhAtEB3EWxEP&index=8[YouTube]
+{% if DISPLAY_SIMULATION_LINKS %}
 |*Simulation*  
 (https://drive.google.com/open?id=0B630TpgzAhO_eERmS2lJcDM2OVU[Tutorial]) |https://drive.google.com/open?id=0B630TpgzAhO_RzNCT05VTnBHRU0[Mac]
 https://drive.google.com/open?id=0B630TpgzAhO_Nk5CYzVzV0sxQ2c[HTML]
+{% endif %}
 |===
 
 
