--- a/demos/msa-on-demand-env.adoc
+++ b/demos/msa-on-demand-env.adoc
@@ -6,9 +6,11 @@
 |*Difficulty*|Easy
 |*Slides*|https://docs.google.com/presentation/d/1bt4k9yB0wDOj0d5WzDCWqftPxIizQ7f5S15LysEGFyQ/edit#slide=id.g1b64d8284a_0_15[Google Slide]
 |*Video*|https://www.youtube.com/watch?v=tiCWGvIneMU&list=PLk57upl23Db1fYboes5JowhAtEB3EWxEP&index=4[YouTube]
+{% if DISPLAY_SIMULATION_LINKS %}
 |*Simulation*  
 (https://drive.google.com/open?id=0B630TpgzAhO_eERmS2lJcDM2OVU[Tutorial]) |https://drive.google.com/open?id=0B630TpgzAhO_UHZjeVU3dlE4Wnc[Mac]
 https://drive.google.com/open?id=0B630TpgzAhO_c2xnUDBfYmlTNm8[HTML]
+{% endif %}
 |===
 
 
