--- a/demos/msa-overview.adoc
+++ b/demos/msa-overview.adoc
@@ -6,9 +6,11 @@
 |*Difficulty*|Easy
 |*Slides*|https://docs.google.com/presentation/d/1bt4k9yB0wDOj0d5WzDCWqftPxIizQ7f5S15LysEGFyQ/edit#slide=id.g19ddf4bec2_2_27[Google Slide]
 |*Video*|https://www.youtube.com/watch?v=dIWscwlRN78&list=PLk57upl23Db1fYboes5JowhAtEB3EWxEP&index=1[YouTube]
+{% if DISPLAY_SIMULATION_LINKS %}
 |*Simulation*  
 (https://drive.google.com/open?id=0B630TpgzAhO_eERmS2lJcDM2OVU[Tutorial]) |https://drive.google.com/open?id=0B630TpgzAhO_YjVxSERlRzUyMms[Mac]
 https://drive.google.com/open?id=0B630TpgzAhO_Vlgwa3RHUGg3MFE[HTML]
+{% endif %}
 |===
 
 
