--- a/demos/msa-service-resilience.adoc
+++ b/demos/msa-service-resilience.adoc
@@ -6,9 +6,11 @@
 |*Difficulty*|Medium
 |*Slides*|https://docs.google.com/presentation/d/1bt4k9yB0wDOj0d5WzDCWqftPxIizQ7f5S15LysEGFyQ/edit#slide=id.g1b95a791a8_0_24[Google Slide]
 |*Video*|https://www.youtube.com/watch?v=T2JZPQOwyQs&list=PLk57upl23Db1fYboes5JowhAtEB3EWxEP&index=3[YouTube]
+{% if DISPLAY_SIMULATION_LINKS %}
 |*Simulation*  
 (https://drive.google.com/open?id=0B630TpgzAhO_eERmS2lJcDM2OVU[Tutorial]) |https://drive.google.com/open?id=0B630TpgzAhO_N2VmZm5fc0hlc1E[Mac]
 https://drive.google.com/open?id=0B630TpgzAhO_LVk5WkstdVBudE0[HTML]
+{% endif %}
 |===
 
 ### Explain the Demo Concepts
